normalization for dataset optimizations augmentation profiling

--- a/HGNN/analyse/Calculate random accuracy.ipynb
+++ b/HGNN/analyse/Calculate random accuracy.ipynb
@@ -85,7 +85,7 @@
     "config_parser = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "params = config_parser.fixExperimentParams(params)    \n",
     "experimentPathAndName = os.path.join(experimentsPath, experimentName)\n",
-    "datasetManager = dataLoader.datasetManager(experimentPathAndName)\n",
+    "datasetManager = dataLoader.datasetManager(experimentPathAndName, dataPath)\n",
     "datasetManager.updateParams(config_parser.fixPaths(params))\n",
     "dataset = datasetManager.getDataset()\n",
     "\n",
