--- a/HGNN/dataPrep/Copy_Zip images subset.ipynb
+++ b/HGNN/dataPrep/Copy_Zip images subset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# defining global variables\n",
     "image_directory='/data/BGNN_data/INHS_cropped'\n",
-    "subset = '52'\n",
-    "zip_output_directory = '/data/BGNN_data/52_diagnostics_2'\n",
+    "subset = 'biology_paper_200max'\n",
+    "zip_output_directory = '/data/BGNN_data/biology_paper_200max'\n",
     "\n",
     "import os\n",
     "if not os.path.exists(zip_output_directory):\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,38 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b7076d6217f4ac994bcf12e535897a5",
+       "model_id": "24bf394f80414b02a49e6cfa101baecd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Saving images', max=2600.0, style=ProgressStyle(descripti…"
+       "HBox(children=(FloatProgress(value=0.0, description='Saving images', max=6695.0, style=ProgressStyle(descripti…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
     },
     {
      "name": "stdout",
