--- a/HGNN/dataPrep/Create cleaned metadata.ipynb
+++ b/HGNN/dataPrep/Create cleaned metadata.ipynb
@@ -32,10 +32,11 @@
    "source": [
     "dataPath=\"/data/BGNN_data\"\n",
     "image_path='INHS_cropped'\n",
-    "output_directory_name=\"200per\"\n",
+    "output_directory_name=\"biology_paper_200max\"\n",
     "cleaned_species_csv_fileName = \"cleaned_metadata.csv\"\n",
     "species_csv_fileName = \"metadata.csv\"\n",
-    "numberOfImagesPerSpecies =200"
+    "numberOfImagesPerSpecies_min =100 \n",
+    "numberOfImagesPerSpecies_toKeep =200 # If None, keep all"
    ]
   },
   {
@@ -54,20 +55,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "output                   fileName         scientificName     Genus         Family\n",
-      "0     INHS_FISH_103994.jpg       Gambusia affinis  Gambusia    Poeciliidae\n",
-      "1     INHS_FISH_108425.jpg    Notropis stramineus  Notropis     Cyprinidae\n",
-      "2      INHS_FISH_59772.jpg      Lepomis cyanellus   Lepomis  Centrarchidae\n",
-      "3       INHS_FISH_4051.jpg        Noturus gyrinus   Noturus    Ictaluridae\n",
-      "4      INHS_FISH_21948.jpg  Notropis atherinoides  Notropis     Cyprinidae\n",
-      "...                    ...                    ...       ...            ...\n",
-      "4395  INHS_FISH_101648.jpg         Noturus miurus   Noturus    Ictaluridae\n",
-      "4396   INHS_FISH_19001.jpg         Noturus miurus   Noturus    Ictaluridae\n",
-      "4397    INHS_FISH_2603.jpg         Noturus miurus   Noturus    Ictaluridae\n",
-      "4398   INHS_FISH_61604.jpg         Noturus miurus   Noturus    Ictaluridae\n",
-      "4399   INHS_FISH_33864.jpg         Noturus miurus   Noturus    Ictaluridae\n",
+      "output                    fileName           scientificName     Genus         Family\n",
+      "0      INHS_FISH_103994.jpg         Gambusia affinis  Gambusia    Poeciliidae\n",
+      "1      INHS_FISH_108425.jpg      Notropis stramineus  Notropis     Cyprinidae\n",
+      "2       INHS_FISH_59772.jpg        Lepomis cyanellus   Lepomis  Centrarchidae\n",
+      "3        INHS_FISH_4051.jpg          Noturus gyrinus   Noturus    Ictaluridae\n",
+      "4       INHS_FISH_21948.jpg    Notropis atherinoides  Notropis     Cyprinidae\n",
+      "...                     ...                      ...       ...            ...\n",
+      "22930   INHS_FISH_45549.jpg      Notropis telescopus  Notropis     Cyprinidae\n",
+      "22935   INHS_FISH_95162.JPG  Morone mississippiensis    Morone      Moronidae\n",
+      "22949   INHS_FISH_82558.jpg      Notropis telescopus  Notropis     Cyprinidae\n",
+      "22959   INHS_FISH_77892.jpg           Noturus exilis   Noturus    Ictaluridae\n",
+      "22961   INHS_FISH_87269.jpg          Lepomis auritus   Lepomis  Centrarchidae\n",
       "\n",
-      "[4400 rows x 4 columns]\n"
+      "[6695 rows x 4 columns]\n"
      ]
     }
    ],
@@ -77,12 +78,17 @@
     "\n",
     "# find species that have a specific number of images\n",
     "grouped_by = metadata_csv_df['scientificName'].value_counts()\n",
-    "grouped_by_larger = grouped_by[grouped_by > numberOfImagesPerSpecies]\n",
-    "scientificNameValues = grouped_by_larger.index.values\n",
+    "grouped_by = grouped_by[grouped_by > numberOfImagesPerSpecies_min]\n",
+    "scientificNameValues = grouped_by.index.values\n",
     "thresholded = metadata_csv_df[metadata_csv_df['scientificName'].isin(scientificNameValues)]\n",
     "\n",
     "# Get first n images from each\n",
-    "trimmed = thresholded.groupby('scientificName').head(numberOfImagesPerSpecies).reset_index(drop=True)\n",
+    "if numberOfImagesPerSpecies_toKeep is not None:\n",
+    "    trimmed = thresholded.groupby('scientificName')\n",
+    "    trimmed = trimmed.head(numberOfImagesPerSpecies_toKeep)\n",
+    "    trimmed.reset_index(drop=True)\n",
+    "else:\n",
+    "    trimmed = thresholded\n",
     "print('output', trimmed)\n",
     "\n",
     "# save the file\n",
