--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"Testing_model_cases_TwoNets\"\n",
+    "experimentName = \"biology_paper_dataset_differentModels\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -41,7 +41,7 @@
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
     "    \"image_path\": \"INHS_cropped\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
-    "    \"suffix\":'52', #  #'11', '52', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
+    "    \"suffix\":'biology_paper_200max', #  #'11', '52', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
     "    \n",
     "    # dataset\n",
     "    \"training_count\":0.64,\n",
@@ -49,13 +49,13 @@
     "\n",
     "    # training\n",
     "    \"batchSize\": 128, # Bigger is more stable\n",
-    "    \"n_epochs\":5000, # allow it to run for long time 4000\n",
-    "    \"learning_rate\":0.001, # Seems 0.0001 to be best value with Adam. 0.1 best for SGD\n",
-    "    \"numOfTrials\":1,\n",
-    "    \"patience\": 50,\n",
+    "    \"n_epochs\":500,\n",
+    "    \"learning_rate\":0.00005, # 0.00005\n",
+    "    \"numOfTrials\":5,\n",
+    "    \"patience\": 10,\n",
     "    \"fc_width\":200,\n",
     "    \"fc_layers\": 1,\n",
-    "    \"modelType\":\"HGNN\",\n",
+    "    \"modelType\":\"BB\",\n",
     "    \"lambda\": 0.6,\n",
     "    \"unsupervisedOnTest\": False,\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
@@ -70,8 +70,10 @@
     "    \n",
     "    \"pretrained\": True,\n",
     "    \"two_nets\": True, # True uses CNN_Two_Nets. Otherwise, uses CNN_hierarchy\n",
-    "    \"link_layer\": \"layer4\", # layer name should be consistent with tl_model layer names\n",
-    "    \"dataset_norm\": True # False: Uses pretrained norm. True: calculates norm from dataset\n",
+    "    \"link_layer\": \"layer3\", # layer name should be consistent with tl_model layer names\n",
+    "    \"dataset_norm\": True, # False: Uses pretrained norm. True: calculates norm from dataset\n",
+    "    \n",
+    "    \"aug_profile\": \"withRotation_PCA1.5\"\n",
     "}\n",
     "\n",
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
@@ -93,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/Testing_model_cases_TwoNets/params.json'"
+       "'/home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/params.json'"
       ]
      },
      "execution_count": 3,
@@ -109,8 +111,8 @@
     "#     \"dummy\":[0]\n",
     "#     \"fc_layers\":[1,2,3],\n",
     "    \n",
-    "#     \"imageDimension\": [28, 56, 224],\n",
-    "#     \"learning_rate\": [0.0001, 0.001, 0.01, 0.1],\n",
+    "#     \"img_res\": [448],\n",
+    "#     \"learning_rate\": [0.00005, 0.0001, 0.0005, 0.001, 0.01, 0.1],\n",
     "#     \"weight_decay\": [0.0001],\n",
     "#     \"kernelSize\": [5, 9],\n",
     "#     \"useZCAWhitening\": [False, True],\n",
@@ -135,14 +137,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 1, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer4', 'dataset_norm': True}\n",
-      "models/63a392166a3f9b66288aceff94e5f91cced2b509b8883ce6e5bc41ac\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 1, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'HGNN', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer4', 'dataset_norm': True}\n",
-      "models/a24e231d7959ea0c9b85bc1aa5b22bf8a6e9559f9933b9d943cc9bc9\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 1, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DISCO', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer4', 'dataset_norm': True}\n",
-      "models/7e76f1d1861d1c74418a7c3f065b0f39b80a4858ad01895775649903\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 1, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DSN', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer4', 'dataset_norm': True}\n",
-      "models/712c0fc25a7e2de3b68539093e04e0d8bfca87d9fd14b933f7b0f1aa\n"
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 5, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': 'withRotation_PCA1.5'}\n",
+      "models/dc9cdf5d84792686be05ad04199b4691281d7c64533198ad5baa2e78\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 5, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'HGNN', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': 'withRotation_PCA1.5'}\n",
+      "models/47e062f28bdd7dc8768626a462508fca6f4a73b1693594d1c5b5d708\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 5, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DISCO', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': 'withRotation_PCA1.5'}\n",
+      "models/39e82b1034de354855512342447991ea092e1c4a3bb9ba59613939c5\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 5, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DSN', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': 'withRotation_PCA1.5'}\n",
+      "models/109e15bd14b51286e5dcf8dd2630b2fba01de4f027517c124454a24f\n"
      ]
     }
    ],
