--- a/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"Pretrain_Freeze\"\n",
+    "experimentName = \"biology_paper_augmentation_effect\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -41,7 +41,7 @@
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
     "    \"image_path\": \"INHS_cropped\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
-    "    \"suffix\":'52', #  #'11', '52', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
+    "    \"suffix\":'biology_paper', #  #'11', '52', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
     "    \n",
     "    # dataset\n",
     "    \"training_count\":0.64,\n",
@@ -49,10 +49,10 @@
     "\n",
     "    # training\n",
     "    \"batchSize\": 128, # Bigger is more stable\n",
-    "    \"n_epochs\":5000, # allow it to run for long time 4000\n",
-    "    \"learning_rate\":0.001, # Seems 0.0001 to be best value with Adam. 0.1 best for SGD\n",
-    "    \"numOfTrials\":5,\n",
-    "    \"patience\": 50,\n",
+    "    \"n_epochs\":500,\n",
+    "    \"learning_rate\":0.00005, # 0.00005\n",
+    "    \"numOfTrials\":3,\n",
+    "    \"patience\": 10,\n",
     "    \"fc_width\":200,\n",
     "    \"fc_layers\": 1,\n",
     "    \"modelType\":\"BB\",\n",
@@ -64,11 +64,16 @@
     "    \"weight_decay\": 0.0001,\n",
     "\n",
     "    \"img_res\": 448,\n",
-    "    \"tl_freeze\": True,\n",
-    "    \"cnn_layers\":0,\n",
-    "    \"cnn_channels\":128,\n",
+    "    \"tl_freeze\": False, # False -> Fine tuning\n",
+    "    \"cnn_layers\":0, # Not used. Don't change. TODO: deprecate\n",
+    "    \"cnn_channels\":128, # Not used. Don't change. TODO: deprecate\n",
     "    \n",
-    "    \"pretrained\": True\n",
+    "    \"pretrained\": True,\n",
+    "    \"two_nets\": True, # True uses CNN_Two_Nets. Otherwise, uses CNN_hierarchy\n",
+    "    \"link_layer\": \"layer3\", # layer name should be consistent with tl_model layer names\n",
+    "    \"dataset_norm\": True, # False: Uses pretrained norm. True: calculates norm from dataset\n",
+    "    \n",
+    "    \"aug_profile\": \"withRotation_PCA1.5\"\n",
     "}\n",
     "\n",
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
@@ -90,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/Pretrain_Freeze/params.json'"
+       "'/home/elhamod/HGNN/experiments/biology_paper_augmentation_effect/params.json'"
       ]
      },
      "execution_count": 3,
@@ -110,9 +115,11 @@
     "#     {\"training_count\":0.64,\"validation_count\":0.16,'downsample': True, 'takeFromIntermediate': False, 'takeFromIntermediateOutput':-1 },\n",
     "#     {\"training_count\":0.64,\"validation_count\":0.16}\n",
     "    \n",
-    "    {\"pretrained\": True, \"tl_freeze\": False }, #size\n",
-    "    {\"pretrained\": True, \"tl_freeze\": True }, #size\n",
-    "    {\"pretrained\": False, \"tl_freeze\": False }, #size\n",
+    "    {\"augmented\": True, \"aug_profile\": \"withRotation_PCA1.5\", \"suffix\": 'biology_paper_200max' }, \n",
+    "    {\"augmented\": False, \"aug_profile\": None }, \n",
+    "    {\"augmented\": True, \"aug_profile\": \"withRotation_PCA1.5\" },\n",
+    "   \n",
+    "    \n",
     "#     {'downsample': True, 'takeFromIntermediate': True, 'downsampleOutput':400, 'takeFromIntermediateOutput':400, \"fc_layers\": 2 }, #size\n",
     "#     {'downsample': True, 'takeFromIntermediate': True, 'downsampleOutput':200, 'takeFromIntermediateOutput':200, \"fc_layers\": 3 }, #size\n",
     "#     {'downsample': True, 'takeFromIntermediate': True, 'downsampleOutput':400, 'takeFromIntermediateOutput':400, \"fc_layers\": 3 }, #size\n",
@@ -142,12 +149,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True}\n",
-      "models/006017540c316d10c71f49dfc7bd7091de02a430d372d4d8e00eaa88\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True}\n",
-      "models/817740e87e551175d5dca219d1b404f38a148b4933daee479fc33a01\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': False}\n",
-      "models/99155e86c5bb7bf8ad39ea3c4ecbfcaa31b05955e9eb3f1fb0110952\n"
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 3, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': 'withRotation_PCA1.5'}\n",
+      "models/091351b87556c0d52115d41316e73819c38ea32f4790877f20fc5137\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 3, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': None}\n",
+      "models/4464a23d6af79dd38c3c5246da5e29f384e0a71e7534051899490df1\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 3, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': 'withRotation_PCA1.5'}\n",
+      "models/fb5984a76c894d52a986dcd5ce42a0e64330462ac087ee5cc5a4f0ba\n"
      ]
     }
    ],
